--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,15 @@ name: Main
 
 on:
  push:
-   branches: [ "main" ]
+   branches: 
+     - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '8.0', '9.0' ]
+        dotnet-version: [ '6.0', '8.0' ]
 
     steps:
     - uses: actions/checkout@v4
